# sdk-ops

./: CHANGELOG.md  README.md  cog.toml  pyproject.toml
src/sdkops/: cli.py  generator.py  json_schema.py  sdkops.py
tests/: schema_sample1.json  test_json_schema.py
